// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new ServerDeploymentGroupDirector() #constructAsgGroup uses defaults if only name is passed 1`] = `
{
  "DeploymentGroup6D277AF0": {
    "Properties": {
      "ApplicationName": {
        "Ref": "DeploymentGroupApplication7B89ABEB",
      },
      "AutoRollbackConfiguration": {
        "Enabled": true,
        "Events": [
          "DEPLOYMENT_FAILURE",
        ],
      },
      "DeploymentConfigName": "CodeDeployDefault.AllAtOnce",
      "DeploymentGroupName": "test-cd-dg",
      "ServiceRoleArn": {
        "Fn::GetAtt": [
          "DeploymentGroupRoleC40B98DA",
          "Arn",
        ],
      },
    },
    "Type": "AWS::CodeDeploy::DeploymentGroup",
  },
  "DeploymentGroupApplication7B89ABEB": {
    "Properties": {
      "ComputePlatform": "Server",
    },
    "Type": "AWS::CodeDeploy::Application",
  },
  "DeploymentGroupRoleC40B98DA": {
    "Properties": {
      "AssumeRolePolicyDocument": {
        "Statement": [
          {
            "Action": "sts:AssumeRole",
            "Effect": "Allow",
            "Principal": {
              "Service": "codedeploy.amazonaws.com",
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "ManagedPolicyArns": [
        {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::aws:policy/service-role/AWSCodeDeployRole",
            ],
          ],
        },
      ],
    },
    "Type": "AWS::IAM::Role",
  },
}
`;

exports[`new ServerDeploymentGroupDirector() #constructEc2Group can create groups for the same application 1`] = `
{
  "DeploymentGroupDevelop5C995268": {
    "Properties": {
      "ApplicationName": {
        "Ref": "DeploymentGroupDevelopApplication8497067F",
      },
      "AutoRollbackConfiguration": {
        "Enabled": true,
        "Events": [
          "DEPLOYMENT_FAILURE",
        ],
      },
      "DeploymentConfigName": "CodeDeployDefault.AllAtOnce",
      "DeploymentGroupName": "test-cd-dg-devel",
      "ServiceRoleArn": {
        "Fn::GetAtt": [
          "DeploymentGroupDevelopRole3F2B6EFE",
          "Arn",
        ],
      },
    },
    "Type": "AWS::CodeDeploy::DeploymentGroup",
  },
  "DeploymentGroupDevelopApplication8497067F": {
    "Properties": {
      "ComputePlatform": "Server",
    },
    "Type": "AWS::CodeDeploy::Application",
  },
  "DeploymentGroupDevelopRole3F2B6EFE": {
    "Properties": {
      "AssumeRolePolicyDocument": {
        "Statement": [
          {
            "Action": "sts:AssumeRole",
            "Effect": "Allow",
            "Principal": {
              "Service": "codedeploy.amazonaws.com",
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "ManagedPolicyArns": [
        {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::aws:policy/service-role/AWSCodeDeployRole",
            ],
          ],
        },
      ],
    },
    "Type": "AWS::IAM::Role",
  },
  "DeploymentGroupStaging19AF76AC": {
    "Properties": {
      "ApplicationName": {
        "Ref": "DeploymentGroupStagingApplication50335847",
      },
      "AutoRollbackConfiguration": {
        "Enabled": true,
        "Events": [
          "DEPLOYMENT_FAILURE",
        ],
      },
      "DeploymentConfigName": "CodeDeployDefault.AllAtOnce",
      "DeploymentGroupName": "test-cd-dg-stag",
      "ServiceRoleArn": {
        "Fn::GetAtt": [
          "DeploymentGroupStagingRole5DBB2C01",
          "Arn",
        ],
      },
    },
    "Type": "AWS::CodeDeploy::DeploymentGroup",
  },
  "DeploymentGroupStagingApplication50335847": {
    "Properties": {
      "ComputePlatform": "Server",
    },
    "Type": "AWS::CodeDeploy::Application",
  },
  "DeploymentGroupStagingRole5DBB2C01": {
    "Properties": {
      "AssumeRolePolicyDocument": {
        "Statement": [
          {
            "Action": "sts:AssumeRole",
            "Effect": "Allow",
            "Principal": {
              "Service": "codedeploy.amazonaws.com",
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "ManagedPolicyArns": [
        {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::aws:policy/service-role/AWSCodeDeployRole",
            ],
          ],
        },
      ],
    },
    "Type": "AWS::IAM::Role",
  },
  "ServerApplicationID0A7B7E9A": {
    "Properties": {
      "ApplicationName": "cd.ServerApplication",
      "ComputePlatform": "Server",
    },
    "Type": "AWS::CodeDeploy::Application",
  },
}
`;

exports[`new ServerDeploymentGroupDirector() #constructEc2Group uses defaults if only name is passed 1`] = `
{
  "DeploymentGroup6D277AF0": {
    "Properties": {
      "ApplicationName": {
        "Ref": "DeploymentGroupApplication7B89ABEB",
      },
      "AutoRollbackConfiguration": {
        "Enabled": true,
        "Events": [
          "DEPLOYMENT_FAILURE",
        ],
      },
      "DeploymentConfigName": "CodeDeployDefault.AllAtOnce",
      "DeploymentGroupName": "test-cd-dg",
      "ServiceRoleArn": {
        "Fn::GetAtt": [
          "DeploymentGroupRoleC40B98DA",
          "Arn",
        ],
      },
    },
    "Type": "AWS::CodeDeploy::DeploymentGroup",
  },
  "DeploymentGroupApplication7B89ABEB": {
    "Properties": {
      "ComputePlatform": "Server",
    },
    "Type": "AWS::CodeDeploy::Application",
  },
  "DeploymentGroupRoleC40B98DA": {
    "Properties": {
      "AssumeRolePolicyDocument": {
        "Statement": [
          {
            "Action": "sts:AssumeRole",
            "Effect": "Allow",
            "Principal": {
              "Service": "codedeploy.amazonaws.com",
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "ManagedPolicyArns": [
        {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::aws:policy/service-role/AWSCodeDeployRole",
            ],
          ],
        },
      ],
    },
    "Type": "AWS::IAM::Role",
  },
}
`;
